<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="qwerty.cadence.cadence"
    android:background="@color/blackText"
    android:id="@+id/y">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent"
        android:gravity="center_vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/slopeText"
                    android:textColor="@color/whiteText"
                    android:textSize="@dimen/abc_action_button_min_width_overflow_material"
                    android:text="@string/slopeText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/slope"
                    android:textColor="@color/whiteText"
                    android:textSize="@dimen/abc_action_button_min_width_overflow_material"
                    android:onClick="resetSlope"
                    android:clickable="true"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/slopeText"
                    android:layout_toEndOf="@+id/slopeText"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/speedText"
                android:id="@+id/speedText"
                android:textColor="@color/whiteText"
                android:textSize="@dimen/abc_action_button_min_width_overflow_material"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/speedSize"
                android:id="@+id/speedVal"
                android:textColor="@color/blueText"
                android:text="@string/maxSpeed"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="20dp"
                android:textStyle="bold"
                android:textIsSelectable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/speedUnits"
                android:id="@+id/speedUnit"
                android:textColor="@color/blueText"

                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cadenceText"
                android:id="@+id/cadenceText"
                android:textColor="@color/whiteText"
                android:textSize="@dimen/abc_action_button_min_width_overflow_material"
                />

            <TextView
                android:text="@string/cadence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/speedSize"
                android:id="@+id/rearStarInputFirst"
                android:textColor="@color/greenText"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cadenceUnits"
                android:id="@+id/cadenceUnit"
                android:textColor="@color/greenText"

                android:gravity="center_horizontal" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="center_vertical|center_horizontal">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:weightSum="1">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plus"
                        android:id="@+id/plusFront"
                        android:onClick="addFrontGear"
                        android:textSize="@dimen/menuTextSize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="Large Text"
                        android:id="@+id/textView" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plus"
                        android:id="@+id/plusRear"
                        android:onClick="addRearGear"
                        android:textSize="@dimen/menuTextSize" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/one"
                        android:id="@+id/FrontGearIndicator"
                        android:background="@color/blackText"
                        android:textColor="@color/whiteText"
                        android:textSize="@dimen/menuTextSize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="Large Text"
                        android:id="@+id/textView3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/one"
                        android:id="@+id/RearGearIndicator"
                        android:background="@color/blackText"
                        android:textColor="@color/whiteText"
                        android:textSize="@dimen/menuTextSize" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minuse"
                        android:id="@+id/minuseFront"
                        android:onClick="subFrontGear"
                        android:textSize="@dimen/menuTextSize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="Large Text"
                        android:id="@+id/textView2" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minuse"
                        android:id="@+id/minuseRear"
                        android:onClick="subRearGear"
                        android:textSize="@dimen/menuTextSize" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
